package Model.Policy;

public class BasicPlan extends SubscriptionPlan {

   //private static final int maxEnrollments = 3;
    // to na duvida se fica aqui

    @Override
    public String getPlanName() {
        return "Basic";
    }
    
}
