package Model.Policy;

public class PremiumPlan extends SubscriptionPlan{

    @Override
    public String getPlanName() {
        return "Premium";
    }
    
}
