package Model.Policy;

public abstract class SubscriptionPlan {

    //public abstract Boolean canEnroll(Student student, Course course);
    //ai aqui poderia passar se o aluno pode pelo plano e se o curso ta ativo

    public abstract String getPlanName();
    
}
